--- a/MCT-nocturnidad-app/templates/index.html
+++ b/MCT-nocturnidad-app/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>MCT Herramienta web Cálculo de nocturnidad</title>
+    <title>MCT Resultados de nocturnidad por acuerdo judicial</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 <body>
@@ -20,4 +20,5 @@
     </form>
 </body>
 </html>
+
 
